<resources>
    <string name="app_name">Movie Man</string>

    <!--    Navbar-->
    <string name="trending">Trending</string>
    <string name="now_playing">Now Playing</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>

    <!--    Movie Grid-->
    <string name="movie_desc">Movie</string>
    <string name="bookmark_desc">Bookmark</string>
    <string name="rating_desc">Rating</string>
    <string name="default_rating">0.0</string>
    <string name="empty_list">Nothing present here *yet*</string>
    <string name="move_to_top">Move To Top</string>

    <!--    Trending-->
    <string name="trending_today">Today</string>
    <string name="trending_week">This Week</string>
    <string name="trending_view_all">View All >>></string>
    <string name="trending_day_heading">Trending Today</string>
    <string name="trending_week_heading">Trending This Week</string>

    <!--    Movie View-->
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">Description</string>
    <string name="movie_back">Back</string>
    <string name="movie_share">Share</string>
    <string name="movie_bookmark">Bookmark</string>
    <string name="plus18">18+</string>
    <string name="release_date_head">Released on </string>
    <string name="release_not_available">(Not Available)</string>

    <!--    Share-->
    <string name="movie_view_ref_code">@string/app_name</string>
    <string name="invalid_code">Invalid URL of MovieMan</string>
    <string name="invalid_movie">Invalid Movie</string>
    <string name="share_url" translatable="false">https://movieman.com/movie/</string>
    <string name="refer_msg">Check it out in MovieMan!</string>
    <string name="share_using">Share Movie using</string>

<!--    Search-->
    <string name="enter_more_than_three">Please enter more than 3 characters.</string>
    <string name="showing_results_for">Showing results for: </string>
    <string name="star">Star</string>
    <string name="rating">Rating</string>
    <string name="movie_year">Movie Year</string>

<!--    Internet-->
    <string name="working_offline">Working Offline</string>
</resources>