<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movieBgd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/palette_2"
        android:contentDescription="@string/movie_desc"
        android:scaleType="centerInside"
        android:src="@drawable/logo_movieman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/movieBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bookmark_btn_bg"
        android:contentDescription="@string/bookmark_desc"
        android:src="@drawable/ic_bookmark_btn"
        app:layout_constraintBottom_toBottomOf="@+id/movieBgd"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/movieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rating_desc"
        android:text="@string/default_rating"
        android:textSize="@dimen/movie_grid_rating_size"
        android:textColor="@color/palette_5"
        android:paddingStart="@dimen/movie_grid_rating_pad"
        android:paddingEnd="@dimen/movie_grid_rating_pad"
        app:layout_constraintBottom_toBottomOf="@+id/movieBookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieBookmark" />

</androidx.constraintlayout.widget.ConstraintLayout>