<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/palette_5"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/tools"
    tools:context=".activity.MovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imagePoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@color/palette_5"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintTop_toTopOf="parent"
            fresco:actualImageScaleType="centerCrop"
            fresco:fadeDuration="100"
            fresco:placeholderImage="@drawable/logo_movieman"
            fresco:viewAspectRatio="0.67"/>

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/movie_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/share"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/movie_share"
            android:layout_margin="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/name"
            android:textSize="@dimen/text_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp"
            android:textColor="@color/palette_1"
            app:layout_constraintTop_toBottomOf="@id/imagePoster"
            tools:text="@string/movie_name" />

        <TextView
            android:id="@+id/summary"
            android:textColor="@color/palette_1"
            android:textSize="@dimen/text_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="@string/movie_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
